--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_main.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,92 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.snov.traintracking.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:orientation="vertical">
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/TrainTrackingView"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            card_view:cardCornerRadius="8dp">
+
+            <TextView
+                android:text="Train Tracking"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:layout_marginTop="35dp"/>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/ReservationView"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            card_view:cardCornerRadius="8dp"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:text="Ticket Reservation"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:layout_marginTop="35dp"/>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/NewsFeedView"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            card_view:cardCornerRadius="8dp"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:text="NEWS Feed"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:layout_marginTop="35dp"/>
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/FeedbackView"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            card_view:cardCornerRadius="8dp"
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:text="Ratings and Feedbacks"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAlignment="center"
+                android:textSize="20dp"
+                android:layout_marginTop="35dp"/>
+
+        </android.support.v7.widget.CardView>
+
+
+
+    </LinearLayout>
+
+
+
+
 </RelativeLayout>
