--- a/Android App/TrainTracking2/app/src/main/res/values/colors.xml
+++ b/Android App/TrainTracking2/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="CardBackground">#004D40</color>
+
 </resources>
