--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_main.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.snov.traintracking.MainActivity">
+    tools:context="com.snov.traintracking.MainActivity"
+    android:background="@color/CardBackground">
 
     <LinearLayout
         android:layout_width="match_parent"
