--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_feedback.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_feedback.xml
@@ -9,4 +9,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.snov.traintracking.FeedbackActivity">
 
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/TrainsList"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
