--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_news.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_news.xml
@@ -7,6 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.snov.traintracking.NewsActivity">
+    tools:context=".activities.NewsActivity">
 
 </RelativeLayout>
