--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_reservation.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_reservation.xml
@@ -3,10 +3,144 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:float="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activities.ReservationActivity">
+    tools:context="com.snov.traintracking.activities.SelectStationsActivity">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="10dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Select Start Station"
+            />
+
+        <Spinner
+            android:id="@+id/Start_Station_DropDown"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:text="Select End Station"/>
+
+        <Spinner
+            android:id="@+id/End_Station_DropDown"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
+            />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/select_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                float:cardCornerRadius="30dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                float:cardBackgroundColor="@color/button_background">
+                <TextView
+                    android:gravity="center"
+                    android:layout_width="150dp"
+                    android:layout_height="60dp"
+                    android:text="Select Date"
+                    android:textColor="#000"/>
+            </android.support.v7.widget.CardView>
+
+
+            <Spinner
+                android:id="@+id/select_class_dropdown"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp" />
+
+        </LinearLayout>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/search_train"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            float:cardCornerRadius="30dp"
+            android:layout_gravity="center"
+            float:cardBackgroundColor="@color/button_background">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:text="Search Train"
+                android:textColor="#000" />
+        </android.support.v7.widget.CardView>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Latitude"
+            android:visibility="gone"
+            android:id="@+id/latitude"
+            android:layout_gravity="center_horizontal" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Longitude"
+            android:visibility="gone"
+            android:id="@+id/longitude"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send Data"
+            android:id="@+id/send_button"
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Location Data"
+            android:id="@+id/location_data"
+            android:textSize="10dp"
+            android:visibility="gone"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/date_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Date"/>
+
+        <TextView
+            android:id="@+id/class_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:text="Class"/>
+
+
+    </LinearLayout>
 
 </RelativeLayout>
