--- a/Android App/TrainTracking2/app/src/main/res/layout/trains_list_item.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/trains_list_item.xml
@@ -10,101 +10,98 @@
         android:layout_margin="10dp"
         >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:padding="5dp"
-        android:paddingBottom="15dp"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="85dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/train"
-            />
-
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:layout_width="252dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:paddingBottom="15dp">
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#333"
-                android:textSize="18dp"
-                android:text="Train"
-                android:layout_alignTop="@+id/image"
-                android:layout_toRightOf="@+id/image"
-                android:layout_toEndOf="@+id/image"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="7dp"/>
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="85dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/train" />
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_width="149dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/start"
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/image"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_toEndOf="@+id/image"
+                    android:layout_toRightOf="@+id/image"
+                    android:text="Train"
                     android:textColor="#333"
-                    android:text="Start"
-                    android:textSize="10dp"
-                    android:layout_below="@+id/title"
-                    android:layout_alignLeft="@+id/title"
-                    android:layout_alignStart="@+id/title"
-                    android:layout_marginLeft="7dp"/>
+                    android:textSize="18dp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/start"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/title"
+                        android:layout_alignStart="@+id/title"
+                        android:layout_alignLeft="@+id/title"
+                        android:layout_marginLeft="7dp"
+                        android:text="Start"
+                        android:textColor="#333"
+                        android:textSize="10dp" />
+
+                    <TextView
+                        android:id="@+id/end"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/title"
+                        android:layout_alignStart="@+id/title"
+                        android:layout_alignLeft="@+id/title"
+                        android:layout_marginLeft="7dp"
+                        android:text="End"
+                        android:textColor="#333"
+                        android:textSize="10dp" />
+                </LinearLayout>
+
 
                 <TextView
-                    android:id="@+id/end"
+                    android:id="@+id/time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/author"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_toEndOf="@+id/image"
+                    android:layout_toRightOf="@+id/image"
+                    android:text="Time"
                     android:textColor="#333"
-                    android:text="End"
-                    android:textSize="10dp"
-                    android:layout_below="@+id/title"
-                    android:layout_alignLeft="@+id/title"
-                    android:layout_alignStart="@+id/title"
-                    android:layout_marginLeft="7dp"/>
+                    android:textSize="10dp" />
+
+                <TextView
+                    android:id="@+id/type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/author"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_toEndOf="@+id/image"
+                    android:layout_toRightOf="@+id/image"
+                    android:text="8/10 Ratings"
+                    android:textColor="#333"
+                    android:textSize="10dp" />
+
+
             </LinearLayout>
 
-
-
-            <TextView
-                android:id="@+id/time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#333"
-                android:text="Time"
-                android:textSize="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/author"
-                android:layout_toRightOf="@+id/image"
-                android:layout_toEndOf="@+id/image"
-                android:layout_marginLeft="7dp"/>
-
-            <TextView
-                android:id="@+id/type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#333"
-                android:text="8/10 Ratings"
-                android:textSize="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/author"
-                android:layout_toRightOf="@+id/image"
-                android:layout_toEndOf="@+id/image"
-                android:layout_marginLeft="7dp"/>
-
-
         </LinearLayout>
-
-    </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
