--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_select_seats.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_select_seats.xml
@@ -52,6 +52,14 @@
         android:text="TextView" />
 
 
+    <Button
+        android:id="@+id/done_seats_button"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:text="Done"/>
+
+
 
 </LinearLayout>
 </ScrollView>
