--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_login.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_login.xml
@@ -10,13 +10,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.snov.traintracking.activities.LoginActivity">
+    tools:context="com.snov.traintracking.activities.LoginActivity"
+    android:background="#FFCDD2">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:orientation="vertical"
         android:background="@drawable/panel"
+        android:layout_marginTop="75dp"
         >
 
         <com.wrapp.floatlabelededittext.FloatLabeledEditText
