--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_sign_up.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_sign_up.xml
@@ -10,7 +10,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.snov.traintracking.activities.LoginActivity">
+    tools:context="com.snov.traintracking.activities.LoginActivity"
+    android:background="#FFCDD2">
 
     <LinearLayout
         android:layout_width="match_parent"
