--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_place_order.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_place_order.xml
@@ -8,6 +8,51 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back"
+
         android:layout_gravity="center"/>
+
+    <TextView
+        android:id="@+id/reservation_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:id="@+id/reservation_class"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:id="@+id/reservation_user"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:id="@+id/reservation_train"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:id="@+id/reservation_seats"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:id="@+id/reservation_price"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_marginTop="5dp"/>
+
+
 
 </LinearLayout>
