--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_reservation.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_reservation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.snov.traintracking.activities.SelectStationsActivity">
+    tools:context="com.snov.traintracking.activities.Reservation.ReservationActivity">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
@@ -47,32 +47,44 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_marginTop="20dp">
 
-            <android.support.v7.widget.CardView
+            <!--<android.support.v7.widget.CardView-->
+                <!--android:id="@+id/select_date"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:layout_marginBottom="10dp"-->
+                <!--float:cardBackgroundColor="@color/button_background"-->
+                <!--float:cardCornerRadius="30dp">-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="150dp"-->
+                    <!--android:layout_height="60dp"-->
+                    <!--android:gravity="center"-->
+                    <!--android:text="Select Date"-->
+                    <!--android:textColor="#000" />-->
+            <!--</android.support.v7.widget.CardView>-->
+
+            <Button
                 android:id="@+id/select_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="10dp"
-                float:cardBackgroundColor="@color/button_background"
-                float:cardCornerRadius="30dp">
-
-                <TextView
-                    android:layout_width="150dp"
-                    android:layout_height="60dp"
-                    android:gravity="center"
-                    android:text="Select Date"
-                    android:textColor="#000" />
-            </android.support.v7.widget.CardView>
-
+                android:text=" Select Date"
+                android:drawableLeft="@drawable/ic_date_range_black_24dp"/>
 
             <Spinner
+                android:layout_marginTop="20dp"
                 android:id="@+id/select_class_dropdown"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp" />
+                 />
+
+
+
+
+
 
         </LinearLayout>
 
@@ -82,7 +94,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             float:cardBackgroundColor="@color/button_background"
-            float:cardCornerRadius="30dp">
+            float:cardCornerRadius="30dp"
+            android:layout_marginTop="20dp">
 
             <TextView
                 android:layout_width="150dp"
@@ -145,4 +158,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
