--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_place_order.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_place_order.xml
@@ -53,6 +53,12 @@
         android:text="TextView"
         android:layout_marginTop="5dp"/>
 
+    <Button
+        android:id="@+id/delete_record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete"/>
+
 
 
 </LinearLayout>
