--- a/Android App/TrainTracking2/app/src/main/res/layout/activity_place_order.xml
+++ b/Android App/TrainTracking2/app/src/main/res/layout/activity_place_order.xml
@@ -54,10 +54,10 @@
         android:layout_marginTop="5dp"/>
 
     <Button
-        android:id="@+id/delete_record"
+        android:id="@+id/checkout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete"/>
+        android:text="checkout"/>
 
 
 
