--- a/New web/design/basic.css
+++ b/New web/design/basic.css
@@ -60,3 +60,11 @@ select{
   color: black;
   text-align: right;
 }
+input[type=text],  textarea {
+    width: 100%;
+    padding: 16px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+	box-sizing: border-box;
+}
