--- a/New web/design/basic.css
+++ b/New web/design/basic.css
@@ -31,7 +31,7 @@ h4{
 }
 h5{
   font-size: 40px;
-  margin-left: 800px;
+  margin-left: 500px;
   font-weight: bolder;
   font-family: sans-serif;
   color: black;
@@ -67,4 +67,7 @@ input[type=text],  textarea {
     border-radius: 4px;
     background-color: #f1f1f1;
 	box-sizing: border-box;
+}
+.button1{
+  margin-left: 1000px;
 }
