--- a/New web/design/basic.css
+++ b/New web/design/basic.css
@@ -31,7 +31,7 @@ h4{
 }
 h5{
   font-size: 40px;
-  margin-left: 500px;
+  margin-left: 450px;
   font-weight: bolder;
   font-family: sans-serif;
   color: black;
@@ -52,6 +52,7 @@ select{
   font-style: italic;;
   font-size: 15px;
   font-family: sans-serif;
+
 }
 .adder{
   font-size: 20px;
@@ -72,7 +73,7 @@ input[type=text],  textarea {
   margin-left: 1000px;
 }
 .tbody1{
-    height:550px;
+    height:450px;
     overflow-y:auto;
     }
 #search{
@@ -80,4 +81,20 @@ input[type=text],  textarea {
 }
 #box{
   margin-left: 1025px;
+}
+#select{
+  margin-top: 5px;
+}
+.left{
+  margin-left: 500px;
+}
+.form-control {
+    width: 95%;
+}
+label small {
+    color: #678 !important;
+}
+span.req {
+    color:maroon;
+    font-size: 112%;
 }
