--- a/New web/design/form.css
+++ b/New web/design/form.css
@@ -1,7 +1,7 @@
 body{
     background-color: #b3d9ff;
 }
-.form-style-5{
+.form-style{
 	max-width: 1000px;
 	padding: 10px 20px;
 	background: #f4f7f8;
@@ -12,27 +12,27 @@ body{
 	border-radius: 8px;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
-.form-style-5 fieldset{
+.form-style fieldset{
 	border: none;
 }
-.form-style-5 legend {
+.form-style legend {
 	font-size: 40px;
 	margin-bottom: 10px;
 }
-.form-style-5 label {
+.form-style label {
 	display: block;
 	margin-bottom: 8px;
 }
-.form-style-5 input[type="text"],
-.form-style-5 input[type="date"],
-.form-style-5 input[type="datetime"],
-.form-style-5 input[type="email"],
-.form-style-5 input[type="number"],
-.form-style-5 input[type="search"],
-.form-style-5 input[type="time"],
-.form-style-5 input[type="password"],
-.form-style-5 textarea,
-.form-style-5 select {
+.form-style input[type="text"],
+.form-style input[type="date"],
+.form-style input[type="datetime"],
+.form-style input[type="email"],
+.form-style input[type="number"],
+.form-style input[type="search"],
+.form-style input[type="time"],
+.form-style input[type="password"],
+.form-style textarea,
+.form-style select {
 	font-family: Georgia, "Times New Roman", Times, serif;
 	background: rgba(255,255,255,.1);
 	border: none;
@@ -51,23 +51,23 @@ body{
 	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
 	margin-bottom: 30px;
 }
-.form-style-5 input[type="text"]:focus,
-.form-style-5 input[type="date"]:focus,
-.form-style-5 input[type="datetime"]:focus,
-.form-style-5 input[type="email"]:focus,
-.form-style-5 input[type="number"]:focus,
-.form-style-5 input[type="search"]:focus,
-.form-style-5 input[type="time"]:focus,
-.form-style-5 input[type="password"]:focus,
-.form-style-5 textarea:focus,
-.form-style-5 select:focus{
+.form-style input[type="text"]:focus,
+.form-style input[type="date"]:focus,
+.form-style input[type="datetime"]:focus,
+.form-style input[type="email"]:focus,
+.form-style input[type="number"]:focus,
+.form-style input[type="search"]:focus,
+.form-style input[type="time"]:focus,
+.form-style input[type="password"]:focus,
+.form-style textarea:focus,
+.form-style select:focus{
 	background: #d2d9dd;
 }
-.form-style-5 select{
+.form-style select{
 	-webkit-appearance: menulist-button;
 	height:45px;
 }
-.form-style-5 .number {
+.form-style .number {
 	background: #1abc9c;
 	color: black;
 	height: 30px;
@@ -81,8 +81,8 @@ body{
 	border-radius: 15px 15px 15px 0px;
 }
 
-.form-style-5 input[type="submit"],
-.form-style-5 input[type="button"]
+.form-style input[type="submit"],
+.form-style input[type="button"]
 {
 	position: relative;
 	display: block;
@@ -98,8 +98,8 @@ body{
 	border-width: 1px 1px 3px;
 	margin-bottom: 10px;
 }
-.form-style-5 input[type="submit"]:hover,
-.form-style-5 input[type="button"]:hover
+.form-style input[type="submit"]:hover,
+.form-style input[type="button"]:hover
 {
 	background: #109177;
 }
